fix nav bar issue on smaller screens

--- a/src/jio-navbar.css
+++ b/src/jio-navbar.css
@@ -181,7 +181,7 @@ button.nav-link {
   vertical-align: 0.255em;
 }
 
-@media (min-width: 992px) {
+@media (min-width: 1308px) {
   .mr-auto {
     margin-right: auto;
   }
@@ -191,7 +191,7 @@ button.nav-link {
   }
 }
 
-@media (max-width: 991px) {
+@media (max-width: 1309px) {
   .navbar-toggler {
     display: block;
     margin-left: 0;
